--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -1,21 +1,24 @@
 .product-card{
-    width: 80%;
-    height: 10%;
+    width: 100%;
+    min-width: 300px;
+    padding: 15px;
     margin: 8px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    background-color: powderblue;     
-    display: flex;   
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
+    background-color: rgb(247, 247, 247);
+    display: flex;
+    word-break: break-all;
+    transition: all .5s ease-in-out;
+    border-radius: 15px;
 }
 .product-card:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
     transform: scale(1.05);
-    transition: all .5s ease-in-out;
-
 }
 
- .product-outer {
+.product-outer {
     width: 100%;
     text-align: right;
-    padding-bottom: 20px;
+    margin-top: 20px;
 }
 
 .product-inner {
@@ -27,12 +30,10 @@
     text-align: center;
 }
 
-.img{
-
-    height: 140px;
-    width: 140px;
+.product-img{
+    width: 100%;
     border-radius: 50%;    
-
+    aspect-ratio: 1/1;
 }
 .product-button {
     padding: 5px 15px;    
@@ -44,17 +45,33 @@
     color: #fff;
 }
  .product-wrapper {
-    margin: 0 auto;
-    width: 200px;
-    height: 150px;
+    width: 15vw;
+    margin-right: 15px;
+    height:auto;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 } 
 
-.card-body b{
-    font-size: 25px;
-    
+.product-card-body{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.product-data{
+    display: flex;
+    flex-direction: column;
+}
+
+
+.product-title{
+    font-size: 1.2em;    
+}
+
+.product-details{
+    height: auto;
 }
 
 /* .product-wrapper .product-img {
