--- a/src/assets/css/OrderForm.css
+++ b/src/assets/css/OrderForm.css
@@ -1,24 +1,24 @@
-.sakshi-container {
+.orderform-container {
     max-width: 100%;
     /* width: 100%; */
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.sakshi-form-group {
+.orderform-form-group {
     margin-bottom: 20px;
 }
 
-.sakshi-form-group label {
+.orderform-form-group label {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
 }
 
-.sakshi-form-group input {
+.orderform-form-group input {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -26,16 +26,8 @@
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.sakshi-form-group button {
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-}
 
-.sakshi-legend {
+.orderform-legend {
     padding: 20px 0;
     /* padding-left: 40px; */
     font-size: 25px;
