--- a/src/assets/css/Product.css
+++ b/src/assets/css/Product.css
@@ -2,7 +2,7 @@
     width: 100%;
     min-width: 300px;
     padding: 15px;
-    margin: 8px;
+    margin: 8px 0;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.35);
     background-color: rgb(247, 247, 247);
     display: flex;
