--- a/src/assets/css/Category.css
+++ b/src/assets/css/Category.css
@@ -6,13 +6,15 @@
     align-items: center;
 }
 .category-image{
-    display: flex;
     border-radius: 50%;
     width: 10vw;
+    height: 100%;
     aspect-ratio: 1/1;
     background: url(https://picsum.photos/200);
     background-size: 100%;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     box-shadow: 0px 0px 5px gray;
     cursor: pointer;
     transition: background 1s;
